[gd_scene load_steps=6 format=3 uid="uid://d166svgwccwdk"]

[ext_resource type="Script" path="res://Scenes/OpacitySlider.gd" id="1_mwgka"]
[ext_resource type="Texture2D" uid="uid://dxlijcr8f5lh" path="res://Assets/WhiteBG.jpg" id="2_0xs6e"]
[ext_resource type="FontFile" uid="uid://dehjo7qp3a0ua" path="res://Fonts/Teko-SemiBold.ttf" id="2_f3dk2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_51f07"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jtcyr"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0)
anti_aliasing = false

[node name="Node2D" type="Node2D"]
script = ExtResource("1_mwgka")

[node name="HSlider" type="HSlider" parent="."]
offset_left = 5.0
offset_top = 48.0
offset_right = 131.0
offset_bottom = 64.0
mouse_default_cursor_shape = 2
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_51f07")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_51f07")
value = 100.0

[node name="ColorPickerButton" type="Button" parent="."]
offset_left = 5.0
offset_top = 11.0
offset_right = 131.0
offset_bottom = 44.0
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f3dk2")
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxFlat_jtcyr")
theme_override_styles/hover = SubResource("StyleBoxFlat_jtcyr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jtcyr")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jtcyr")
theme_override_styles/focus = SubResource("StyleBoxFlat_jtcyr")
disabled = true
button_mask = 4
text = "Opacity"

[node name="BtnBG" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(6.5, 41.8216)
rotation = -1.5708
scale = Vector2(0.0228693, 0.123833)
texture = ExtResource("2_0xs6e")
centered = false

[connection signal="mouse_entered" from="HSlider" to="." method="_on_h_slider_mouse_entered"]
[connection signal="mouse_exited" from="HSlider" to="." method="_on_h_slider_mouse_exited"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
